--- a/apps/vst/res/values/strings.xml
+++ b/apps/vst/res/values/strings.xml
@@ -4,5 +4,7 @@
     <string name="app_name">VST</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="splash">splash_anim</string>
+    <string name="start_button">start button</string>
 
 </resources>
