--- a/apps/vst/res/values/strings.xml
+++ b/apps/vst/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">Phoneme Friends</string>
+    <string name="app_name">PhonemeFriends</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="splash">splash_anim</string>
